--- a/index1.html
+++ b/index1.html
@@ -47,16 +47,16 @@
 
     // Har bir button uchun alohida hintlar
     const hints = [
-      "Hint 1: Linuxda fayl huquqlari uchun chmod ishlatiladi.",
-      "Hint 2: Windowsda cmd yoki powershell ishlatiladi.",
-      "Hint 3: Linux shell turlari: bash, zsh, sh",
-      "Hint 4: Papkani o'chirish: Linux rm -r, Windows rmdir",
-      "Hint 5: Atrof-muhit o'zgaruvchilarini ko'rish: Linux env, Windows set",
-      "Hint 6: Echo buyrug'i ekranga yozish uchun ishlatiladi",
-      "Hint 7: Fayllarni batafsil ko'rish: ls -la",
-      "Hint 8: CPU haqida ma'lumot: cat /proc/cpuinfo",
-      "Hint 9: Tarmoq tekshirish: ping localhost",
-      "Hint 10: Jarayonlarni ko'rish: top"
+      "Hint 1: Ko‘rinmas qo‘llar bir so‘zni boshqa bilan almashtirdi.",
+      "Hint 2: Romeo Juliet dunyosiga qoshiladi.",
+      "Hint 3: uning maqsadi u edi uning orzusi u bilan bolish edi",
+      "Hint 4: rasm eams",
+      "Hint 5: 5marta qil base64da",
+      "Hint 6: yoq",
+      "Hint 7: yoq",
+      "Hint 8: yoq",
+      "Hint 9: yoq",
+      "Hint 10: Sozning Boshidan boshlanar hammasi"
     ];
 
     const hintPassword = "letmein"; // Hintni ko'rish uchun parol
@@ -81,3 +81,4 @@
   </script>
 </body>
 </html>
+
