--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </nav>
 
   <div class="container text-center">
-    <p>10 Challenge mavjud, har bir tugma bosilganda flag kiritish oynasi ochiladi.</p>
+    <p>10 Challenge mavjud, har bir tugma bosilganda flag kiritish oynasi ochiladi. {user:nova password:novaretr1}, {user:Romeo password:juliet} </p>
 <button class="btn btn-success mb-5"><a class="text-white" href="./index1.html">Hints</a>
 </button>      
     <div id="buttons" class="d-flex flex-wrap justify-content-center"></div>
@@ -40,3 +40,4 @@
  <script src="./script.js" ></script>
 </body>
 </html>
+
